// Tencent is pleased to support the open source community by making tRPC available.
//
// Copyright (C) 2023 Tencent.
// All rights reserved.
//
// If you have downloaded a copy of the tRPC source code from Tencent,
// please note that tRPC source code is licensed under the  Apache 2.0 License,
// A copy of the Apache 2.0 License is included in this file.

syntax = "proto3";
package helloworld;

import "trpc/proto/trpc_options.proto";

option go_package="trpc.group/examples/helloworld";

// HelloReq request
message HelloReq{
    string name = 1 [(trpc.go_tag)='xml:"name"'];
}

// HelloRsp response
message HelloRsp{}